<resources>
    <string name="app_name">Thermal</string>
    <string name="hello">Hello</string>

    <string name="fragment_add_person_name">姓&#12288;&#12288;名</string>
    <string name="fragment_add_person_name_hint">请输入姓名</string>
    <string name="fragment_add_person_number">证件号码</string>
    <string name="fragment_add_person_number_hint">请输入证件号码</string>
    <string name="fragment_add_person_phone">手机号码</string>
    <string name="fragment_add_person_phone_hint">请输入手机号码</string>
    <string name="fragment_add_person_effect_time">生效日期</string>
    <string name="fragment_add_person_invalid_time">失效日期</string>
    <string name="fragment_add_person_invalid_time_hint">请选择失效日期</string>
    <string name="fragment_add_person_type">类&#12288;&#12288;型</string>
    <string name="fragment_add_person_type_staff">员工</string>
    <string name="fragment_add_person_type_visitor">访客</string>
    <string name="fragment_add_person_face">人脸信息</string>
    <string name="fragment_add_person_face_collect">点击采集</string>
    <string name="fragment_add_person_face_collect_over">已采集</string>
    <string name="fragment_add_person_submit">提交</string>

    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期日</string>

    <string name="please_face_the_screen">请正对屏幕</string>
    <string name="please_get_close_to_the_screen">请靠近屏幕</string>
    <string name="please_stay_away_from_the_screen">请远离屏幕</string>
    <string name="live_detection_failed">活体检测失败</string>
    <string name="attendance_success">考勤成功</string>
    <string name="open_gate_success">开门成功</string>
    <string name="please_put_on_mask">请戴口罩</string>

    <string name="websocket_server_online">WebSocketServer服务在线中</string>
    <string name="fragment_home_attendance">考&#12288;勤</string>
    <string name="fragment_home_personnel">人&#12288;员</string>
    <string name="fragment_home_new_file">建&#12288;档</string>
    <string name="fragment_home_log">日&#12288;志</string>
    <string name="fragment_home_setting">设&#12288;置</string>

    <string name="fragment_face_register_extract_success">人脸特征提取成功</string>

    <string name="fragment_person_title">本地人员</string>
    <string name="fragment_person_search_name_hint">人员姓名：</string>
    <string name="fragment_person_search_number_hint">证件号码：</string>
    <string name="fragment_person_search_phone_hint">手机号码：</string>
    <string name="fragment_person_search_face_status_hint">人脸状态：</string>
    <string name="fragment_person_search_upload_hint">上传状态：</string>
    <string name="fragment_person_search_person_status_hint">人员状态：</string>
    <string name="fragment_person_search_person_type_hint">人员类型：</string>
    <string name="fragment_person_search_search">查询</string>
    <string name="fragment_person_search_reset">重置</string>

    <string name="item_person_name_hint">姓&#12288;&#12288;名：</string>
    <string name="item_person_number_hint">证件号码：</string>
    <string name="item_person_phone_hint">手机号码：</string>
    <string name="item_person_person_type_hint">类&#12288;&#12288;型：</string>
    <string name="item_person_expire_time_hint">生效时间：</string>
    <string name="item_person_invalid_time_hint">失效时间：</string>
    <string name="item_person_local_update_hint">本地更新：</string>
    <string name="item_person_upload_hint">同步状态：</string>
    <string name="item_person_person_status_hint">人员状态：</string>
    <string name="item_person_uploaded">已同步</string>
    <string name="item_person_not_upload">未同步</string>
    <string name="item_person_ready">在库中</string>
    <string name="item_person_delete">已删除</string>

    <string name="fragment_record_title">本地日志</string>
    <string name="fragment_record_search_name_hint">人员姓名：</string>
    <string name="fragment_record_search_number_hint">证件号码：</string>
    <string name="fragment_record_search_phone_hint">手机号码：</string>
    <string name="fragment_record_search_upload_hint">同步状态：</string>
    <string name="fragment_record_search_fever_status_hint">发热状态：</string>
    <string name="fragment_record_search_start_time_hint">开始日期：</string>
    <string name="fragment_record_search_start_time_value_hint">请选择开始日期</string>
    <string name="fragment_record_search_end_time_hint">结束日期：</string>
    <string name="fragment_record_search_end_time_value_hint">请选择结束日期</string>
    <string name="fragment_record_search_search">查询</string>
    <string name="fragment_record_search_reset">重置</string>
    <string name="fragment_record_name_hint">姓名</string>
    <string name="fragment_record_number_hint">证件号码</string>
    <string name="fragment_record_phone_hint">手机号码</string>
    <string name="fragment_record_temperature_hint">体温</string>
    <string name="fragment_record_person_status_hint">状态</string>
    <string name="fragment_record_time_hint">时间</string>

    <string name="item_record_uploaded">已上传</string>
    <string name="item_record_not_upload">未上传</string>

    <string name="fragment_config_title">设&#12288;置</string>
    <string name="fragment_config_version">版本号</string>
    <string name="fragment_config_check_update">检查更新</string>
    <string name="fragment_config_face_version">中正人脸算法版本</string>
    <string name="fragment_config_device_mode">设备模式</string>
    <string name="fragment_config_device_mix">混合</string>
    <string name="fragment_config_device_server">主机</string>
    <string name="fragment_config_device_client">客户端</string>
    <string name="fragment_config_server_host">C：服务器地址</string>
    <string name="fragment_config_server_download_person_path">C：下载人员路径</string>
    <string name="fragment_config_server_update_person_path">C：更新人员路径</string>
    <string name="fragment_config_server_upload_record_path">C：上传日志路径</string>
    <string name="fragment_config_mac">设备Mac</string>
    <string name="fragment_config_time_stamp">同步时间戳</string>
    <string name="fragment_config_reset_time_stamp">清空时间戳</string>
    <string name="fragment_config_showing_camera">画面显示摄像头</string>
    <string name="fragment_config_face_camera">人脸处理摄像头</string>
    <string name="fragment_config_liveness">近红外活体识别</string>
    <string name="fragment_config_forced_mask">强制戴口罩</string>
    <string name="fragment_config_register_quality_score">人脸注册质量阈值</string>
    <string name="fragment_config_quality_score">人脸质量阈值</string>
    <string name="fragment_config_verify_score">人脸比对阈值</string>
    <string name="fragment_config_mask_verify_score">戴口罩人脸比对阈值</string>
    <string name="fragment_config_mask_score">口罩检测阈值</string>
    <string name="fragment_config_liveness_score">人脸活体阈值</string>
    <string name="fragment_config_pupil_distance">人脸瞳距范围</string>
    <string name="fragment_config_dormancy_interval">休眠检测间隔</string>
    <string name="fragment_config_dormancy_delay">休眠延迟时间</string>
    <string name="fragment_config_temp_device_fix">测温设备校准</string>
    <string name="fragment_config_click_to_temp_device_fix">前往校准</string>
    <string name="fragment_config_heat_map">热力图显示</string>
    <string name="fragment_config_fever_score">发热报警阈值</string>
    <string name="fragment_config_heart_beat_interval">心跳间隔</string>
    <string name="fragment_config_failed_query_cold">失败重查冷却</string>
    <string name="fragment_config_verify_cold">成功验证冷却</string>
    <string name="fragment_config_record_clear_threshold">日志保存</string>
    <string name="fragment_config_flash_time">闪光灯持续时间</string>
    <string name="fragment_config_password">设备密码</string>
    <string name="fragment_config_infrared_camera">红外</string>
    <string name="fragment_config_visible_camera">可见光</string>
    <string name="fragment_config_display">显示</string>
    <string name="fragment_config_no_display">不显示</string>
    <string name="fragment_config_open">打开</string>
    <string name="fragment_config_close">关闭</string>

    <string name="person_type_staff">员工</string>
    <string name="person_type_visitor">访客</string>
    <string name="person_type_black">黑名单</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
